[build-system]
requires = [ "flit_core >=3.2,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "gherkin-fmt"
version = "0.1.0"
description = "A simple utility for formatting Gherkin."
readme = "README.md"
dependencies = [
    "click",
    "pydantic",
    "python-dotenv",
    "radon",
    "requests",
    "tabulate",
    "toml",
    "types-toml",
]
authors = [
    { name = "Omar Crosby", email = "omar.crosby@gmail.com" }
]

[tool.flit.module]
module = "gherkin_fmt"

[project.optional-dependencies]
dev = [
    "bandit",
    "build",
    "pip-audit",
    "py-cyclo",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "mypy",
    "black",
    "flake8",
    "isort",
    "jinja2",
    "pylint",
    "twine",
    "click",
    "gherkin-official",
]

[project.scripts]
gfmt = "gherkin_fmt.main:main"

[tool.black]
line-length = 88
target-version = [ "py313",]
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n)/\n"
